packages/core/src/checkbox/Checkbox.css
/* Styles applied to root component */
.saltCheckbox {
  display: inline-flex;
  gap: var(--salt-spacing-100);
  position: relative;
  cursor: var(--salt-selectable-cursor-hover);

  font-size: var(--salt-text-fontSize);
  line-height: var(--salt-text-lineHeight);
  font-family: var(--salt-text-fontFamily);
  font-weight: var(--salt-text-fontWeight);
}

/* Styles applied to root component if `disabled={true}` */
.saltCheckbox-disabled {
  color: var(--salt-content-primary-foreground-disabled);
  cursor: var(--salt-selectable-cursor-disabled);
}

/* Styles applied to root component if `readOnly={true}` */
.saltCheckbox-readOnly {
  color: var(--salt-content-primary-foreground);
  cursor: var(--salt-selectable-cursor-readonly);
}

.saltCheckbox-input,
.saltCheckboxIcon {
  margin-top: calc((var(--salt-text-lineHeight) - var(--salt-size-selectable)) / 2);
  box-sizing: border-box;
}

/* Styles applied to the icon component if focused */
.saltCheckbox-input:focus-visible + .saltCheckboxIcon {
  outline-offset: var(--salt-focused-outlineOffset);
  outline: var(--saltCheckbox-outline, var(--salt-focused-outline));
  border-color: var(--salt-selectable-borderColor-hover);
  color: var(--salt-selectable-foreground-hover);
}

.saltCheckbox-input:focus-visible + .saltCheckboxIcon-checked {
  border-color: var(--salt-selectable-borderColor-selected);
  color: var(--salt-selectable-foreground-selected);
}

.saltCheckbox-error .saltCheckbox-input:focus-visible + .saltCheckboxIcon {
  outline-color: var(--salt-status-error-foreground-decorative);
  border-color: var(--salt-status-error-borderColor);
  color: var(--salt-status-error-foreground-decorative);
}

.saltCheckbox-warning .saltCheckbox-input:focus-visible + .saltCheckboxIcon {
  outline-color: var(--salt-status-warning-foreground-decorative);
  border-color: var(--salt-status-warning-borderColor);
  color: var(--salt-status-warning-foreground-decorative);
}

/* Styles applied to input element */
.saltCheckbox-input {
  cursor: inherit;
  margin: 0;
  opacity: 0;
  padding: 0;
  position: absolute;
  z-index: var(--salt-zIndex-default);
}

